--- a/20211027_RS-TMA_cluster.ipynb
+++ b/20211027_RS-TMA_cluster.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "Compare to images\n",
     "\n",
-    "compare to hitological subtypes"
+    "compare to histological subtypes"
    ]
   },
   {
@@ -234,7 +234,7 @@
    },
    "outputs": [],
    "source": [
-    "df_filter_mi#.head()\n",
+    "#df_filter_mi#.head()\n",
     "#s_date"
    ]
   },
@@ -1311,9 +1311,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3.9.5",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "base"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1325,7 +1325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
